# circuit-breaker-demo

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app-deployment-v2.yaml  app-deployment.yaml  destinationrule-conn-limit.yaml  destinationrule-conn-pool.yaml  pyproject.toml  vs-cb.yaml
src/circuit_breaker_lab/: __init__.py
